# swedish-construction-faq-1000

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md  llms.txt
.github/workflows/: build-formats.yml
data/: faq-alpaca.jsonl  faq-en-alpaca.jsonl  faq-en-sharegpt.jsonl  faq-en.csv  faq-en.json  faq-en.jsonl  faq-sharegpt.jsonl  faq.csv  faq.json  faq.json.bak  faq.jsonl
docs/: README-analytics.md  README.md  altan-staket-plank.md  arbetsmiljo.md  attefallshus-friggebod.md  badrumsrenovering.md  bbr-pbl.md  bergvarme-jordvarme.md  besiktning.md  buller-granne.md  bygglov.md  dataset.html  dispute.md  dolda-fel.md  elinstallation.md  energideklaration.md  f-skatt.md  fasadrenovering.md  feed.xml  forsakring-ansvar.md  garantier.md  index.html  isolering.md  koksrenovering.md  kontrakt.md  kostnader.md  marklov-rivningslov.md  omvand-moms.md  oppen-spis-vedeldning.md  personalliggare.md  radon-fuktskador.md  reklamation-process.md  robots.txt  rot-avdrag.md  rut-avdrag.md  sitemap.xml  solceller-varmpump.md  strandskydd.md  takläggning.md  tillbyggnad.md  (+6 more)
docs/category/: altan-staket-plank.html  arbetsmiljo.html  attefallshus-friggebod.html  badrumsrenovering.html  bbr-pbl.html  bergvarme-jordvarme.html  besiktning.html  buller-granne.html  bygglov.html  dispute.html  dolda-fel.html  elinstallation.html  energideklaration.html  f-skatt.html  fasadrenovering.html  forsakring-ansvar.html  garantier.html  index.html  isolering.html  koksrenovering.html  kontrakt.html  kostnader.html  marklov-rivningslov.html  omvand-moms.html  oppen-spis-vedeldning.html  personalliggare.html  radon-fuktskador.html  reklamation-process.html  rot-avdrag.html  rut-avdrag.html  solceller-varmpump.html  strandskydd.html  takläggning.html  tillbyggnad.html  tomtgrans-servitut.html  varmesystem.html  ventilation.html  verifiera-byggfirma.html  vvs.html  yrkesbevis-certifikat.html
docs/en/: index.html
docs/en/category/: altan-staket-plank.html  arbetsmiljo.html  attefallshus-friggebod.html  badrumsrenovering.html  bbr-pbl.html  bergvarme-jordvarme.html  besiktning.html  buller-granne.html  bygglov.html  dispute.html  dolda-fel.html  elinstallation.html  energideklaration.html  f-skatt.html  fasadrenovering.html  forsakring-ansvar.html  garantier.html  index.html  isolering.html  koksrenovering.html  kontrakt.html  kostnader.html  marklov-rivningslov.html  omvand-moms.html  oppen-spis-vedeldning.html  personalliggare.html  radon-fuktskador.html  reklamation-process.html  rot-avdrag.html  rut-avdrag.html  vvs.html  (+9 more)
docs/guides/: abs-18-for-konsument.html  bygglov-steg-for-steg.html  dolda-fel-vid-huskop.html  index.html  rot-avdrag-2026.html
huggingface/: README.md
kaggle/: dataset-metadata.json  faq-alpaca.jsonl
notebooks/: quickstart.ipynb
python/: .gitignore  README.md  pyproject.toml
python/zaragoza_construction_faq/: __init__.py
scripts/: build-formats.mjs  merge-batches.mjs  merge-en-batches.mjs
web/: dataset.html  index.html
